chore: add english locale for all lower casing (#13213)
relates to #13212