@@ -17,9 +17,7 @@ import static org.camunda.optimize.dto.optimize.ReportConstants.SHORT_TYPE;
 import static org.camunda.optimize.dto.optimize.ReportConstants.STRING_TYPE;
 
 import com.fasterxml.jackson.annotation.JsonValue;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -36,11 +34,10 @@ public enum VariableType {
   OBJECT(OBJECT_TYPE),
   JSON(JSON_TYPE);
 
-  private static final Set<VariableType> NUMERIC_TYPES =
-      Collections.unmodifiableSet(new HashSet<>(Arrays.asList(INTEGER, SHORT, LONG, DOUBLE)));
+  private static final Set<VariableType> NUMERIC_TYPES = Set.of(INTEGER, SHORT, LONG, DOUBLE);
   private static final Map<String, VariableType> BY_LOWER_CASE_ID_MAP =
       Stream.of(VariableType.values())
-          .collect(toMap(type -> type.getId().toLowerCase(), type -> type));
+          .collect(toMap(type -> type.getId().toLowerCase(Locale.ENGLISH), type -> type));
 
   private final String id;
 
